@@ -1,3 +1,9 @@
+2019-01-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* debug.c (do_set_var): Add comments before calls to assoc_set.
+	* interpret.h (r_interpret): For Op_sub_array, deref the subscript
+	appropriately. Thanks to Andy Schorr for the catch.
+
 2019-01-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* array.c (asort_actual): Use assoc_set in 2 places.
